--- a/index.html
+++ b/index.html
@@ -547,13 +547,14 @@
 
           <div class="mobile-center">
             <p class="text-lg text-gray-300 leading-relaxed mb-6">
-              Passionate Laravel developer with 5+ years of experience specializing in building robust, scalable web
-              applications. I focus on creating efficient backend systems, RESTful APIs, and dynamic admin panels using
+              Passionate Laravel Developer with 3+ years of experience in building robust and scalable web applications.
+              Specialized in developing efficient backend systems, RESTful APIs, and dynamic admin panels using the
               Laravel ecosystem.
             </p>
             <p class="text-lg text-gray-300 leading-relaxed mb-8">
-              My expertise includes Livewire for reactive interfaces, MySQL optimization, and implementing secure
-              authentication systems. I thrive on solving complex problems with elegant, maintainable code.
+              Proficient in creating reactive interfaces with Livewire, optimizing MySQL databases for performance, and
+              implementing secure authentication and authorization systems. Strong problem-solver with a focus on
+              writing clean, maintainable, and scalable code
             </p>
             <div class="flex gap-6">
               <div class="text-center">
@@ -561,13 +562,13 @@
                 <div class="text-gray-400">Projects</div>
               </div>
               <div class="text-center">
-                <div class="text-3xl font-bold text-yellow-400">5+</div>
+                <div class="text-3xl font-bold text-yellow-400">3+</div>
                 <div class="text-gray-400">Years Exp</div>
               </div>
-              <div class="text-center">
+              <!-- <div class="text-center">
                 <div class="text-3xl font-bold text-yellow-400">100%</div>
                 <div class="text-gray-400">Satisfaction</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -967,7 +968,7 @@
             <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
               <i class="fas fa-calculator text-3xl text-red-500"></i>
             </div>
-            <h3 class="text-xl font-semibold mb-3">Finance Calculator Suite</h3>
+            <h3 class="text-xl font-semibold mb-3">Leave Management</h3>
             <p class="text-gray-300 mb-6">Comprehensive financial tools including EMI, SIP & Lumpsum calculators with
               real-time calculations and data visualization.</p>
           </div>
@@ -977,7 +978,71 @@
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Chart.js</span>
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">MySQL</span>
           </div>
-          <a href="#" class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+          <a href="https://leave.mobilegiz.com" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+            View Case Study <i class="fas fa-arrow-right text-sm"></i>
+          </a>
+        </div>
+
+        <div class="glass-card p-8 rounded-3xl stagger-item">
+          <div class="mb-6">
+            <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
+              <i class="fas fa-calculator text-3xl text-red-500"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-3">Data Navigator</h3>
+            <p class="text-gray-300 mb-6">Comprehensive financial tools including EMI, SIP & Lumpsum calculators with
+              real-time calculations and data visualization.</p>
+          </div>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Laravel</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Livewire</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Chart.js</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">MySQL</span>
+          </div>
+          <a href="https://app2.datanavigator.io/" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+            View Case Study <i class="fas fa-arrow-right text-sm"></i>
+          </a>
+        </div>
+
+        <div class="glass-card p-8 rounded-3xl stagger-item">
+          <div class="mb-6">
+            <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
+              <i class="fas fa-calculator text-3xl text-red-500"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-3">Saptak Patel</h3>
+            <p class="text-gray-300 mb-6">Comprehensive financial tools including EMI, SIP & Lumpsum calculators with
+              real-time calculations and data visualization.</p>
+          </div>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Laravel</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Livewire</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Chart.js</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">MySQL</span>
+          </div>
+          <a href="https://www.saptakpatel.com" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+            View Case Study <i class="fas fa-arrow-right text-sm"></i>
+          </a>
+        </div>
+
+        <div class="glass-card p-8 rounded-3xl stagger-item">
+          <div class="mb-6">
+            <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
+              <i class="fas fa-calculator text-3xl text-red-500"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-3">smr</h3>
+            <p class="text-gray-300 mb-6">Comprehensive financial tools including EMI, SIP & Lumpsum calculators with
+              real-time calculations and data visualization.</p>
+          </div>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Laravel</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Livewire</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Chart.js</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">MySQL</span>
+          </div>
+          <a href="https://smrdemo.pams.sg/" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
         </div>
@@ -988,9 +1053,8 @@
             <div class="inline-block p-4 rounded-xl bg-blue-500/10 mb-4">
               <i class="fas fa-tachometer-alt text-3xl text-blue-500"></i>
             </div>
-            <h3 class="text-xl font-semibold mb-3">Enterprise Admin Panel</h3>
-            <p class="text-gray-300 mb-6">Role-based admin system with dashboards, analytics, user management, and
-              reporting tools for enterprise clients.</p>
+            <h3 class="text-xl font-semibold mb-3">Vivache</h3>
+            <p class="text-gray-300 mb-6">Ecommerce website for selling products.</p>
           </div>
           <div class="flex flex-wrap gap-2 mb-6">
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Laravel</span>
@@ -998,7 +1062,8 @@
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Spatie Permissions</span>
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Bootstrap</span>
           </div>
-          <a href="#" class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+          <a href="https://vivachekw.com" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
         </div>
@@ -1019,7 +1084,29 @@
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Queue</span>
             <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">DomPDF</span>
           </div>
-          <a href="#" class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+          <a href="https://chipsorders.com/v1/public/en" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
+            View Case Study <i class="fas fa-arrow-right text-sm"></i>
+          </a>
+        </div>
+
+        <div class="glass-card p-8 rounded-3xl stagger-item">
+          <div class="mb-6">
+            <div class="inline-block p-4 rounded-xl bg-green-500/10 mb-4">
+              <i class="fas fa-file-pdf text-3xl text-green-500"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-3">3roodq8</h3>
+            <p class="text-gray-300 mb-6">Queue-based large file processing system that converts CSV data to formatted
+              PDF reports with email notifications.</p>
+          </div>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Laravel</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Redis</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">Queue</span>
+            <span class="px-3 py-1 bg-gray-800/50 rounded-full text-sm">DomPDF</span>
+          </div>
+          <a href="http://3roodq8.com/" target="_blank"
+            class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
         </div>
