--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         <a href="#about" class="text-gray-300 hover:text-yellow-400 transition-colors">About</a>
         <a href="#skills" class="text-gray-300 hover:text-yellow-400 transition-colors">Skills</a>
         <a href="#experience" class="text-gray-300 hover:text-yellow-400 transition-colors">Experience</a>
-        <a href="#projects" class="text-gray-300 hover:text-yellow-400 transition-colors">Projects</a>
+        <!-- <a href="#projects" class="text-gray-300 hover:text-yellow-400 transition-colors">Projects</a> -->
         <a href="#contact" class="text-gray-300 hover:text-yellow-400 transition-colors">Contact</a>
       </div>
       <button id="mobileMenuBtn" class="md:hidden text-yellow-400 text-2xl">
@@ -474,8 +474,8 @@
           class="text-gray-300 hover:text-yellow-400 py-2 transition-colors border-b border-gray-800">Skills</a>
         <a href="#experience"
           class="text-gray-300 hover:text-yellow-400 py-2 transition-colors border-b border-gray-800">Experience</a>
-        <a href="#projects"
-          class="text-gray-300 hover:text-yellow-400 py-2 transition-colors border-b border-gray-800">Projects</a>
+        <!-- <a href="#projects"
+          class="text-gray-300 hover:text-yellow-400 py-2 transition-colors border-b border-gray-800">Projects</a> -->
         <a href="#contact" class="text-gray-300 hover:text-yellow-400 py-2 transition-colors">Contact</a>
       </div>
     </div>
@@ -499,10 +499,10 @@
         </div>
 
         <div class="flex flex-col sm:flex-row justify-center gap-4">
-          <a href="#projects"
+          <!-- <a href="#projects"
             class="btn-primary px-8 py-4 rounded-full text-lg font-semibold transition-all duration-300">
             <i class="fas fa-rocket mr-2"></i> View Projects
-          </a>
+          </a> -->
           <a href="#contact"
             class="btn-outline px-8 py-4 rounded-full text-lg font-semibold transition-all duration-300">
             <i class="fas fa-paper-plane mr-2"></i> Hire Me
@@ -558,7 +558,7 @@
             </p>
             <div class="flex gap-6">
               <div class="text-center">
-                <div class="text-3xl font-bold text-yellow-400">50+</div>
+                <div class="text-3xl font-bold text-yellow-400">20+</div>
                 <div class="text-gray-400">Projects</div>
               </div>
               <div class="text-center">
@@ -957,7 +957,7 @@
   </section>
 
   <!-- PROJECTS -->
-  <section id="projects" class="py-20 px-6">
+  <!-- <section id="projects" class="py-20 px-6">
     <div class="container-responsive">
       <h2 class="text-3xl md:text-4xl font-bold text-gradient text-center mb-14 reveal-item">Featured Projects</h2>
 
@@ -1112,7 +1112,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- CONTACT -->
   <section id="contact" class="py-20 px-6">
