--- a/index.html
+++ b/index.html
@@ -961,9 +961,9 @@
     <div class="container-responsive">
       <h2 class="text-3xl md:text-4xl font-bold text-gradient text-center mb-14 reveal-item">Featured Projects</h2>
 
-      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 stagger-container">
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 stagger-container"> -->
         <!-- Project 1 -->
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
               <i class="fas fa-calculator text-3xl text-red-500"></i>
@@ -982,9 +982,9 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
+        </div> -->
 
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
               <i class="fas fa-calculator text-3xl text-red-500"></i>
@@ -1003,9 +1003,9 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
+        </div> -->
 
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
               <i class="fas fa-calculator text-3xl text-red-500"></i>
@@ -1024,9 +1024,9 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
+        </div> -->
 
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-red-500/10 mb-4">
               <i class="fas fa-calculator text-3xl text-red-500"></i>
@@ -1045,10 +1045,10 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
+        </div> -->
 
         <!-- Project 2 -->
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-blue-500/10 mb-4">
               <i class="fas fa-tachometer-alt text-3xl text-blue-500"></i>
@@ -1066,10 +1066,10 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
+        </div> -->
 
         <!-- Project 3 -->
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-green-500/10 mb-4">
               <i class="fas fa-file-pdf text-3xl text-green-500"></i>
@@ -1088,9 +1088,9 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
+        </div> -->
 
-        <div class="glass-card p-8 rounded-3xl stagger-item">
+        <!-- <div class="glass-card p-8 rounded-3xl stagger-item">
           <div class="mb-6">
             <div class="inline-block p-4 rounded-xl bg-green-500/10 mb-4">
               <i class="fas fa-file-pdf text-3xl text-green-500"></i>
@@ -1109,8 +1109,8 @@
             class="text-yellow-400 hover:text-yellow-300 font-medium flex items-center gap-2">
             View Case Study <i class="fas fa-arrow-right text-sm"></i>
           </a>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div>
     </div>
   </section> -->
 
